assets/css/global.css
@import url('./modal.css');
@import url('./fonts.css');

html {
    /* background-color: #191919; */
    background-color: black;
}

.bkg {
  background-image: url("~/assets/bkg.jpeg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 100vh;
  min-width: 100vw;
  position: fixed;
  top: 10%;
  left: 10%;
  z-index: -500;
  filter: grayscale();
  opacity: 0.4;
  background-blend-mode: luminosity;
  transform: scale(1.2);
}

body {
    margin: 3.9vh 4vw 3.9vh 4vw;
}
.Toastify__toast {
  font-size: 0.875rem;
  font-family: "Gilroy" !important;
  font-style: normal;
}

.Toastify__toast-container {
  z-index: 500 !important;
  width: unset !important;
}

.bg {
  position: fixed;
  top: -50%;
  left: -50%;
  right: -50%;
  bottom: -50%;
  width: 200%;
  height: 200%;
  background: transparent url('https://framerusercontent.com/images/rR6HYXBrMmX4cRpXfXUOvpvpB0.png') repeat 0 0;
  background-repeat: repeat;
  animation: bg-animation 0.3s infinite;
  opacity: .15;
  visibility: visible;
  pointer-events: none;
  z-index: 1000;
}

@keyframes bg-animation {
    0% { transform: translate(0,0) }
    10% { transform: translate(-1%,-1%) }
    20% { transform: translate(-2%,1%) }
    30% { transform: translate(1%,-2%) }
    40% { transform: translate(-1%,3%) }
    50% { transform: translate(-2%,1%) }
    60% { transform: translate(3%,0) }
    70% { transform: translate(0,2%) }
    80% { transform: translate(-3%,0) }
    90% { transform: translate(2%,1%) }
    100% { transform: translate(1%,0) }
}

.vaults-list {
  width: 100%;
  display: flex;
  flex-direction: column;
}

table {
  width: 100%;
  border-collapse:separate;
  border-spacing: 0 12px;
}

thead th {
  font-family: "Gilroy";
  font-weight: 400;
  font-size: 1rem;
  color: #fff;
}

td,
th {
  text-align: left;
  padding: 30px 30px;
  font-size: 1.25rem;
  font-family: "Gilroy";
  font-style: normal;
}

td {
  font-weight: 400;
  color: #fff;
}

.item {
  background: rgba(255, 255, 255, 0.05);
  transition: 300ms;
}

.item td {
  border-top: 1px solid rgba(255, 255, 255, 0.1);
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.item td:first-child {
  border-left: 1px solid rgba(255, 255, 255, 0.1);
}

.item td:last-child {
  border-right: 1px solid rgba(255, 255, 255, 0.1);
}

.tippy-box {
  font-family: 'Gilroy';
  font-size: 1rem;
  font-weight: 400;
}

.tippy-box[data-theme~="custom"] {
  color: rgb(255, 255, 255);
  border-radius: 3px;
  border: 1px solid rgba(255, 255, 255, 0.25);
  background: rgb(44, 44, 44);
}


@media (hover: hover) {
  .item:hover{
    border: 1px solid rgba(255, 255, 255, 0.25);
    background: rgba(255, 255, 255, 0.15);
    box-shadow: 0px 9px 19px 0px rgba(0, 0, 0, 0.33), 0px 35px 35px 0px rgba(0, 0, 0, 0.29), 0px 79px 48px 0px rgba(0, 0, 0, 0.17), 0px 141px 56px 0px rgba(0, 0, 0, 0.05), 0px 220px 62px 0px rgba(0, 0, 0, 0.01);
    backdrop-filter: blur(25px);
    cursor: pointer;
  }
}

.item:active {
  border: 1px solid rgba(255, 255, 255, 0.25);
  background: rgba(255, 255, 255, 0.15);
  box-shadow: 0px 9px 19px 0px rgba(0, 0, 0, 0.33), 0px 35px 35px 0px rgba(0, 0, 0, 0.29), 0px 79px 48px 0px rgba(0, 0, 0, 0.17), 0px 141px 56px 0px rgba(0, 0, 0, 0.05), 0px 220px 62px 0px rgba(0, 0, 0, 0.01);
  backdrop-filter: blur(25px);
  cursor: pointer;
}

.mobile-detail {
  display: none;
}
.mobile-detail-btn {
  display: none;
}
.empty-cell {
  padding-top: 15px;
  font-size: 1rem;
}
.cell {
  padding-top: 15px;
  font-size: 1rem;
}
.ticker {
  color: rgb(140, 140, 140);
  font-family: Gilroy;
  font-style: normal;
  font-weight: 500;
}
.vault-image {
  width: 24px;
  height: 24px;
  object-fit: cover; /* Ensure the image covers the area, adjust as needed */
  margin-right: 10px; /* Space between image and name */
  border-radius: 50%; /* Makes the image circular */
  background-color: #fff;
}
.expandVaultMobile {
  display: none;
}
.fmcap-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
.label-text {
  color: #FFF;
  font-family: Gilroy;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
}

.noise-btn {
  background: url("~/assets/noise-white-btn.png"), lightgray 50%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.noise-va {
  position: relative;
  display: flex;
}

.noise-va::before {
  content: '';
  top: 0;
  left: 0;
  width: 100%; /* Cover the full size of the parent */
  height: 100%; /* Cover the full size of the parent */
  position: absolute;
  background-image: url("~/assets/noise-vault-address.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  pointer-events: none;
  mix-blend-mode: overlay;
  transform: translate3d(0,0,0);
}

.noise-vi-1 {
  position: relative;
  display: flex;
}

.noise-vi-1::before {
  content: '';
  top: 0;
  left: 0;
  width: 100%; /* Cover the full size of the parent */
  height: 100%; /* Cover the full size of the parent */
  position: absolute;
  background-image: url("~/assets/noise-vi-1.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  pointer-events: none;
  mix-blend-mode: overlay;
  transform: translate3d(0,0,0);
}

.noise-vi-2 {
  position: relative;
  display: flex;
}

.noise-vi-2::before {
  content: '';
  top: 0;
  left: 0;
  width: 100%; /* Cover the full size of the parent */
  height: 100%; /* Cover the full size of the parent */
  position: absolute;
  background-image: url("~/assets/noise-vi-2.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  pointer-events: none;
  mix-blend-mode: overlay;
  transform: translate3d(0,0,0);
}

.noise-chart {
  position: relative;
  display: flex;
}

.noise-chart::before {
  content: '';
  top: 0;
  left: 0;
  width: 100%; /* Cover the full size of the parent */
  height: 100%; /* Cover the full size of the parent */
  position: absolute;
  background-image: url("~/assets/noise-chart.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  pointer-events: none;
  mix-blend-mode: overlay;
  /* transform: translate3d(0,0,0); */
}

@media (max-width: 1300px) {
  td,
  th {
    padding: 30px 15px;
  }
}
@media (max-width: 1100px) {
  td,
  th {
    padding: 30px 10px;
  }
}

@media (max-width: 868px) {

  .desktop {
    display: none;
  }
  .mobile-detail {
    display: flex;
    flex-direction: column;
  }
  .mobile-detail-btn {
    display: table-row;
    width: 100%;
  }
  .fmcap {
    text-align: right;
  }
  .fmcap {
    border-right: 1px solid rgba(255, 255, 255, 0.1);
  }
  .fmcap-wrapper {
    justify-content: flex-end;
  }
  td,
  th {
    padding: 20px 10px;
    font-size: 1rem;
  }
  .expandVaultMobile {
    display: flex;
    width: 10px;
    height: 5px;
    margin-left: 5px;
    background-image: url("~/assets/expandMobileList.svg");
  }
}

@media (max-width: 767px) {
    body {
        margin: 0;
    }
}

@media (max-width: 500px) {
  .noise-chart::before {
    transform: translate3d(0,0,0);
  }
}
  

